--- a/js/pages/checkin/opendoor.html
+++ b/js/pages/checkin/opendoor.html
@@ -50,7 +50,7 @@
 </style>
 
 <div ms-controller="opendoor">
-    <div style="text-align: right">
+    <!-- <div style="text-align: right">
         <div id="mySwitch" class="mui-switch" style="margin: 24px 30px 24px auto;float: right">
             <div class="mui-switch-handle"></div>
         </div>
@@ -63,7 +63,7 @@
 
     <div id="divAr" style="text-align: center" ms-if="showType==2">
         <img src="../img/km-yx-2.png">
-    </div>
+    </div> -->
 
     <div class="slideunlock-content">
         <div class="slideunlock-wrapper">
