--- a/js/pages/order/newOrderList.html
+++ b/js/pages/order/newOrderList.html
@@ -111,7 +111,7 @@
             <span class="mui-icon"><img src="/img/icon/icon-dingdan-select.svg" class="nav-ico"></span>
             <span class="mui-tab-label">订单</span>
         </a>
-        <a class="mui-tab-item" ms-on-tap="goUser">
+        <a class="mui-tab-item" ms-on-tap="goMore">
             <span class="mui-icon"><img src="/img/icon/icon-more.svg" class="nav-ico"></span>
             <span class="mui-tab-label">我的</span>
         </a>
