--- a/js/pages/service/process.html
+++ b/js/pages/service/process.html
@@ -72,7 +72,7 @@
     <div class="oneLine" style="float: right;">
         <div id="a1" class="answer bs-text-normal">
             <button id='goal' type='button' class="mui-btn mui-btn-block button bs-text-normal">{{goal}}</button>
-            <img src="../img/icon/service-triangle.svg" class="arrow">
+            <img src="../img/icon/pickerArrow.svg" class="arrow">
         </div>
         <div class="online-height">
             <img id="r1" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
@@ -89,7 +89,7 @@
     <div class="oneLine" style="float: right;">
         <div id="a2" class="answer bs-text-normal">
             <button id='companion' type='button' class="mui-btn mui-btn-block button bs-text-normal">{{companion}}</button>
-            <img src="../img/icon/service-triangle.svg" class="arrow">
+            <img src="../img/icon/pickerArrow.svg" class="arrow">
         </div>
         <div class="online-height">
             <img id="r2" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
@@ -106,7 +106,7 @@
     <div class="oneLine" style="float: right;">
         <div id="a3" class="answer bs-text-normal">
             <button id='vr' type='button' class="mui-btn mui-btn-block button bs-text-normal">{{vr}}</button>
-            <img src="../img/icon/service-triangle.svg" class="arrow">
+            <img src="../img/icon/pickerArrow.svg" class="arrow">
         </div>
         <div class="online-height">
             <img id="r3" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
@@ -123,7 +123,7 @@
     <div class="oneLine" style="float: right;">
         <div id="a4" class="answer bs-text-normal">
             <button id='old' type='button' class="mui-btn mui-btn-block button bs-text-normal">{{old}}</button>
-            <img src="../img/icon/service-triangle.svg" class="arrow">
+            <img src="../img/icon/pickerArrow.svg" class="arrow">
         </div>
         <div>
             <img id="r4" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
@@ -140,7 +140,7 @@
     <div class="oneLine" style="float: right;">
         <div id="a5" class="answer bs-text-normal">
             <button id='other' type='button' class="mui-btn mui-btn-block button bs-text-normal">{{other}}</button>
-            <img src="../img/icon/service-triangle.svg" class="arrow">
+            <img src="../img/icon/pickerArrow.svg" class="arrow">
         </div>
         <div>
             <img id="r5" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
