--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -176,13 +176,25 @@ input[type=checkbox] {
 
         <div class="order-panel bs-text-small" ms-if="data.status==1">
             <div class="order-panel-title bs-text-large bs-text-153">支付方式</div>
-            <div ms-if="discount<1" ms-click="selectPayType(6)" style="margin-bottom: 10px;">
+            <!-- <div ms-if="discount<1" ms-click="selectPayType(6)" style="margin-bottom: 10px;">
                 <div class="hiddenbox">
                     <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6" style="position: absolute; right: 5px;"></div>
                 </div>
                 <span class="bs-text-normal bs-text-black">钱包支付</span>
+            </div> -->
+            <div ms-click="selectPayType(6)" style="margin-bottom: 10px;">
+                <div class="hiddenbox">
+                    <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6" style="position: absolute; right: 5px;"></div>
+                </div>
+                <span class="bs-text-normal bs-text-black">时币支付</span>
             </div>
-            <div ms-if="isweixin" ms-click="selectPayType(2)" style="margin-bottom: 10px;">
+            <!-- <div ms-if="isweixin" ms-click="selectPayType(2)" style="margin-bottom: 10px;">
+                <div class="hiddenbox">
+                    <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2" style="position: absolute; right: 5px;"></div>
+                </div>
+                <span class="bs-text-normal bs-text-black">微信支付</span>
+            </div> -->
+            <div ms-click="selectPayType(2)" style="margin-bottom: 10px;">
                 <div class="hiddenbox">
                     <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2" style="position: absolute; right: 5px;"></div>
                 </div>
