--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -94,26 +94,26 @@ div ul li {
     <div class="mui-page-content bs-text-small">
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
-                <a href="#nick" class="mui-navigate-right">
-                    <div style="width: 25px;height: 25px;" class="circle photo" ms-css-background-image="'url('+urlAPINet + headImg+')'">
+                <a href="#nick" class="mui-navigate-right" style="display: flex;justify-content: flex-start;align-items: center;">
+                    <div style="width: 44px;height: 44px;margin: 0 16px 0 15px;" class="photo" ms-css-background-image="'url('+urlAPINet + headImg+')'">
                         &nbsp;
                     </div>
-                    <span style="margin-right: 25px;">{{nickname}}</span>
+                    <div style="margin-right: 25px;">{{nickname}}</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell">
+            <!-- <li class="mui-table-view-cell">
                 <a href="#" class="mui-navigate-right">
                     <span class="bs-text-gray nav-title">会员中心</span>
                 </a>
-            </li>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            </li> -->
+            <!-- <ul class="mui-table-view" style="margin-top: 5px">
                 <li class="mui-table-view-cell">
                     <a href="invoice-list.html" class="mui-navigate-right">
                         <span class="bs-text-gray nav-title">发票管理</span>
                     </a>
                 </li>
-            </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            </ul> -->
+            <!-- <ul class="mui-table-view" style="margin-top: 5px">
                 <li class="mui-table-view-cell">
                     <a href="frequent-contact-list.html" class="mui-navigate-right">
                         <span class="bs-text-gray nav-title">入住人信息</span>
@@ -126,29 +126,29 @@ div ul li {
                         <span class="bs-text-gray nav-title">本宿公益</span>
                     </a>
                 </li>
-            </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            </ul> -->
+            <ul class="mui-table-view" style="margin-top: 5px;padding-left: 15px;border-bottom: 2px solid #eee;">
                 <li class="mui-table-view-cell">
                     <a href="coupon.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">优惠券</span>
+                        <span class="bs-text-444 nav-title">优惠券</span>
                     </a>
                 </li>
             </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            <ul class="mui-table-view" style="margin-top: 5px;padding-left: 15px;border-bottom: 2px solid #eee;">
                 <li class="mui-table-view-cell">
                     <a href="promotion-detail.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">推广奖励</span>
+                        <span class="bs-text-444 nav-title">推广奖励</span>
                     </a>
                 </li>
             </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            <ul class="mui-table-view" style="margin-top: 5px;padding-left: 15px;border-bottom: 2px solid #eee;">
                 <li class="mui-table-view-cell">
                     <a href="vip-invite.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">邀请好友</span>
+                        <span class="bs-text-444 nav-title">邀请好友</span>
                     </a>
                 </li>
             </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
+            <!-- <ul class="mui-table-view" style="margin-top: 5px">
                 <li class="mui-table-view-cell">
                     <a href="vip-invite.html" class="mui-navigate-right">
                         <span class="bs-text-gray nav-title">设置</span>
@@ -161,7 +161,7 @@ div ul li {
                         <span class="bs-text-gray nav-title">关于我们</span>
                     </a>
                 </li>
-            </ul>
+            </ul> -->
             <!--<li class="mui-table-view-cell">
                 <a href="#">
                     <span class="bs-text-gray nav-title">手机号</span>
@@ -177,7 +177,7 @@ div ul li {
                 </a>
             </li>
         </ul>-->
-        <ul class="mui-table-view" style="margin-top: 50px;margin-bottom: 60px;" ms-if="isLogin==1" ms-click="logOff">
+        <!-- <ul class="mui-table-view" style="margin-top: 50px;margin-bottom: 60px;" ms-if="isLogin==1" ms-click="logOff">
             <li class="mui-table-view-cell">
                 <a class="mui-navigate-right">
                     <span class="bs-text-gray nav-title">退出当前账号</span>
@@ -185,14 +185,14 @@ div ul li {
             </li>
             <div style="height: 5px;">
             </div>
-        </ul>
+        </ul> -->
         <!--<div style="position: fixed; bottom: 0; width: 100%;">
             <div class="mui-content-padded mui-text-center" style="margin-top: 25px">
                 客服电话： <a ms-attr-href="'tel:'+SERVICECALL">{{SERVICECALL}}</a>
             </div>
         </div>-->
     </div>
-    <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
+    <!-- <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
         <a class="mui-tab-item" ms-on-tap="goIndex">
             <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
@@ -209,23 +209,9 @@ div ul li {
             <span class="mui-icon"><img src="/img/icon/icon-more-select.svg" class="nav-ico"></span>
             <span class="mui-tab-label">我的</span>
         </a>
-    </nav>
+    </nav> -->
 </div>
 <div ms-controller="change">
-    <div id="name" class="mui-page" style="position: fixed;z-index: 999;">
-        <div class="mui-page-content">
-            <div class="mui-input-group">
-                <div class="mui-button-row" style="background-color: #efeff4;height: 37px;">
-                    <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
-                    <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isNameChange" ms-class-2="mui-text-gray:!isNameChange" ms-click="save">保存</div>
-                </div>
-                <div class="mui-input-row">
-                    <label>姓名</label>
-                    <input type="text" ms-duplex="newName" autofocus="autofocus" />
-                </div>
-            </div>
-        </div>
-    </div>
     <div id="nick" class="mui-page" style="position: fixed;z-index: 999;">
         <div class="mui-page-content">
             <div class="mui-input-group">
@@ -233,22 +219,19 @@ div ul li {
                     <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
                     <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isNicknameChange" ms-class-2="mui-text-gray:!isNicknameChange" ms-click="save">保存</div>
                 </div>
-                <div class="mui-input-row">
-                    <label>昵称</label>
+                <div class="circle" style="margin: 20px auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;"  ms-css-background-image="'url('+urlAPINet + headImg+')'" ms-on-tap="changeImg">
+                    <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;" />
+                </div>
+                <div class="mui-input-row" style="color: #bdbdbd;">
+                    <label>您的名字</label>
                     <input type="text" ms-duplex="newNickname" autofocus="autofocus" />
                 </div>
-            </div>
-        </div>
-    </div>
-    <div id="mobile" class="mui-page" style="position: fixed;z-index: 999;">
-        <div class="mui-page-content">
-            <div class="mui-input-group">
-                <div class="mui-button-row" style="background-color: #efeff4;height: 37px;">
-                    <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
-                    <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isMobileChange" ms-class-2="mui-text-gray:!isMobileChange" ms-click="save">保存</div>
+                <div class="mui-input-row" style="color: #bdbdbd;">
+                    <label>您的手机</label>
+                    <input type="text" ms-duplex="newMobile" autofocus="autofocus" />
                 </div>
-                <div class="mui-input-row">
-                    <label>手机号</label>
+                <div class="mui-input-row" style="color: #bdbdbd;">
+                    <label>您的生日</label>
                     <input type="text" ms-duplex="newMobile" autofocus="autofocus" />
                 </div>
             </div>
